InSCAPE/OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/gisdefs.h



/* area_poly1.c */
int G_begin_ellipsoid_polygon_area(double, double);

double G_ellipsoid_polygon_area(const double *, const double *, int);


/* area_poly2.c */
double G_planimetric_polygon_area(const double *, const double *, int);


/* area_sphere.c */
int G_begin_zone_area_on_sphere(double, double);

double G_darea0_on_sphere(double);

double G_area_for_zone_on_sphere(double, double);


/* ascii_chk.c */
int G_ascii_check(char *);


/* ask.c */
char *G_ask_new(const char *, char *, char *, char *);

char *G_ask_new_ext(const char *, char *, char *, char *, char *, int (*)());

char *G_ask_old(const char *, char *, char *, char *);

char *G_ask_old_ext(const char *, char *, char *, char *, char *, int (*)());

char *G_ask_any(const char *, char *, char *, char *, int);

char *G_ask_any_ext(const char *, char *, char *, char *, int, char *,
		    int (*)());

char *G_ask_in_mapset(const char *, char *, char *, char *);

char *G_ask_in_mapset_ext(const char *, char *, char *, char *, char *,
			  int (*)());

char *G_ask_new_file(const char *, char *, char *, char *);

char *G_ask_old_file(const char *, char *, char *, char *);

int G_set_ask_return_msg(const char *);

char *G_get_ask_return_msg(void);


/* ask_cell.c */
char *G_ask_cell_new(const char *, char *);

char *G_ask_cell_old(const char *, char *);

char *G_ask_cell_in_mapset(const char *, char *);

char *G_ask_cell_any(const char *, char *);


/* ask_vctrs.c */
char *G_ask_vector_new(const char *, char *);

char *G_ask_vector_old(const char *, char *);

char *G_ask_vector_any(const char *, char *);

char *G_ask_vector_in_mapset(const char *, char *);
int G_vasprintf(char **, const char *, va_list);
int G_asprintf(char **, const char *, ...)
    __attribute__ ((format(printf, 2, 3)));


/* auto_mask.c */
int G__check_for_auto_masking(void);

int G_suppress_masking(void);

int G_unsuppress_masking(void);


/* basename.c */
char *G_basename(char *, const char *);


/* bres_line.c */
int G_bresenham_line(int, int, int, int, int (*)(int, int));


/* cats.c */
int G_read_cats(const char *, const char *, struct Categories *);