OSGeo4W/apps/grass/grass-6.4.2RC2/etc/python/grass/lib/gis.py


# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 74
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_begin_ellipsoid_polygon_area'):
    G_begin_ellipsoid_polygon_area = _libs['grass_gis.6.4.2RC2'].G_begin_ellipsoid_polygon_area
    G_begin_ellipsoid_polygon_area.restype = c_int
    G_begin_ellipsoid_polygon_area.argtypes = [c_double, c_double]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 75
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_ellipsoid_polygon_area'):
    G_ellipsoid_polygon_area = _libs['grass_gis.6.4.2RC2'].G_ellipsoid_polygon_area
    G_ellipsoid_polygon_area.restype = c_double
    G_ellipsoid_polygon_area.argtypes = [POINTER(c_double), POINTER(c_double), c_int]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 78
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_planimetric_polygon_area'):
    G_planimetric_polygon_area = _libs['grass_gis.6.4.2RC2'].G_planimetric_polygon_area
    G_planimetric_polygon_area.restype = c_double
    G_planimetric_polygon_area.argtypes = [POINTER(c_double), POINTER(c_double), c_int]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 81
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_begin_zone_area_on_sphere'):
    G_begin_zone_area_on_sphere = _libs['grass_gis.6.4.2RC2'].G_begin_zone_area_on_sphere
    G_begin_zone_area_on_sphere.restype = c_int
    G_begin_zone_area_on_sphere.argtypes = [c_double, c_double]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 82
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_darea0_on_sphere'):
    G_darea0_on_sphere = _libs['grass_gis.6.4.2RC2'].G_darea0_on_sphere
    G_darea0_on_sphere.restype = c_double
    G_darea0_on_sphere.argtypes = [c_double]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 83
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_area_for_zone_on_sphere'):
    G_area_for_zone_on_sphere = _libs['grass_gis.6.4.2RC2'].G_area_for_zone_on_sphere
    G_area_for_zone_on_sphere.restype = c_double
    G_area_for_zone_on_sphere.argtypes = [c_double, c_double]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 86
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_ascii_check'):
    G_ascii_check = _libs['grass_gis.6.4.2RC2'].G_ascii_check
    G_ascii_check.restype = c_int
    G_ascii_check.argtypes = [String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 89
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_ask_new'):
    G_ask_new = _libs['grass_gis.6.4.2RC2'].G_ask_new
    G_ask_new.restype = ReturnString
    G_ask_new.argtypes = [String, String, String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 90
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_ask_new_ext'):
    G_ask_new_ext = _libs['grass_gis.6.4.2RC2'].G_ask_new_ext
    G_ask_new_ext.restype = ReturnString
    G_ask_new_ext.argtypes = [String, String, String, String, String, CFUNCTYPE(UNCHECKED(c_int), )]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 91
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_ask_old'):
    G_ask_old = _libs['grass_gis.6.4.2RC2'].G_ask_old
    G_ask_old.restype = ReturnString
    G_ask_old.argtypes = [String, String, String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 92
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_ask_old_ext'):
    G_ask_old_ext = _libs['grass_gis.6.4.2RC2'].G_ask_old_ext
    G_ask_old_ext.restype = ReturnString
    G_ask_old_ext.argtypes = [String, String, String, String, String, CFUNCTYPE(UNCHECKED(c_int), )]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 93
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_ask_any'):
    G_ask_any = _libs['grass_gis.6.4.2RC2'].G_ask_any
    G_ask_any.restype = ReturnString
    G_ask_any.argtypes = [String, String, String, String, c_int]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 94
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_ask_any_ext'):
    G_ask_any_ext = _libs['grass_gis.6.4.2RC2'].G_ask_any_ext
    G_ask_any_ext.restype = ReturnString
    G_ask_any_ext.argtypes = [String, String, String, String, c_int, String, CFUNCTYPE(UNCHECKED(c_int), )]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 96
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_ask_in_mapset'):
    G_ask_in_mapset = _libs['grass_gis.6.4.2RC2'].G_ask_in_mapset
    G_ask_in_mapset.restype = ReturnString
    G_ask_in_mapset.argtypes = [String, String, String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 97
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_ask_in_mapset_ext'):
    G_ask_in_mapset_ext = _libs['grass_gis.6.4.2RC2'].G_ask_in_mapset_ext
    G_ask_in_mapset_ext.restype = ReturnString
    G_ask_in_mapset_ext.argtypes = [String, String, String, String, String, CFUNCTYPE(UNCHECKED(c_int), )]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 99
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_ask_new_file'):
    G_ask_new_file = _libs['grass_gis.6.4.2RC2'].G_ask_new_file
    G_ask_new_file.restype = ReturnString
    G_ask_new_file.argtypes = [String, String, String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 100
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_ask_old_file'):
    G_ask_old_file = _libs['grass_gis.6.4.2RC2'].G_ask_old_file
    G_ask_old_file.restype = ReturnString
    G_ask_old_file.argtypes = [String, String, String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 101
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_set_ask_return_msg'):
    G_set_ask_return_msg = _libs['grass_gis.6.4.2RC2'].G_set_ask_return_msg
    G_set_ask_return_msg.restype = c_int
    G_set_ask_return_msg.argtypes = [String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 102
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_ask_return_msg'):
    G_get_ask_return_msg = _libs['grass_gis.6.4.2RC2'].G_get_ask_return_msg
    G_get_ask_return_msg.restype = ReturnString
    G_get_ask_return_msg.argtypes = []

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 105
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_ask_cell_new'):
    G_ask_cell_new = _libs['grass_gis.6.4.2RC2'].G_ask_cell_new
    G_ask_cell_new.restype = ReturnString
    G_ask_cell_new.argtypes = [String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 106
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_ask_cell_old'):
    G_ask_cell_old = _libs['grass_gis.6.4.2RC2'].G_ask_cell_old
    G_ask_cell_old.restype = ReturnString
    G_ask_cell_old.argtypes = [String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 107
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_ask_cell_in_mapset'):
    G_ask_cell_in_mapset = _libs['grass_gis.6.4.2RC2'].G_ask_cell_in_mapset
    G_ask_cell_in_mapset.restype = ReturnString
    G_ask_cell_in_mapset.argtypes = [String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 108
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_ask_cell_any'):
    G_ask_cell_any = _libs['grass_gis.6.4.2RC2'].G_ask_cell_any
    G_ask_cell_any.restype = ReturnString
    G_ask_cell_any.argtypes = [String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 111
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_ask_vector_new'):
    G_ask_vector_new = _libs['grass_gis.6.4.2RC2'].G_ask_vector_new
    G_ask_vector_new.restype = ReturnString
    G_ask_vector_new.argtypes = [String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 112
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_ask_vector_old'):
    G_ask_vector_old = _libs['grass_gis.6.4.2RC2'].G_ask_vector_old
    G_ask_vector_old.restype = ReturnString
    G_ask_vector_old.argtypes = [String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 113
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_ask_vector_any'):
    G_ask_vector_any = _libs['grass_gis.6.4.2RC2'].G_ask_vector_any
    G_ask_vector_any.restype = ReturnString
    G_ask_vector_any.argtypes = [String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 114
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_ask_vector_in_mapset'):
    G_ask_vector_in_mapset = _libs['grass_gis.6.4.2RC2'].G_ask_vector_in_mapset
    G_ask_vector_in_mapset.restype = ReturnString
    G_ask_vector_in_mapset.argtypes = [String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 126
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_vasprintf'):
    G_vasprintf = _libs['grass_gis.6.4.2RC2'].G_vasprintf
    G_vasprintf.restype = c_int
    G_vasprintf.argtypes = [POINTER(POINTER(c_char)), String, c_void_p]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 128
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_asprintf'):
    _func = _libs['grass_gis.6.4.2RC2'].G_asprintf
    _restype = c_int
    _argtypes = [POINTER(POINTER(c_char)), String]
    G_asprintf = _variadic_function(_func,_restype,_argtypes)

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 132
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G__check_for_auto_masking'):
    G__check_for_auto_masking = _libs['grass_gis.6.4.2RC2'].G__check_for_auto_masking
    G__check_for_auto_masking.restype = c_int
    G__check_for_auto_masking.argtypes = []

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 133
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_suppress_masking'):
    G_suppress_masking = _libs['grass_gis.6.4.2RC2'].G_suppress_masking
    G_suppress_masking.restype = c_int
    G_suppress_masking.argtypes = []

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 134
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_unsuppress_masking'):
    G_unsuppress_masking = _libs['grass_gis.6.4.2RC2'].G_unsuppress_masking
    G_unsuppress_masking.restype = c_int
    G_unsuppress_masking.argtypes = []

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 137
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_basename'):
    G_basename = _libs['grass_gis.6.4.2RC2'].G_basename
    G_basename.restype = ReturnString
    G_basename.argtypes = [String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 140
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_bresenham_line'):
    G_bresenham_line = _libs['grass_gis.6.4.2RC2'].G_bresenham_line
    G_bresenham_line.restype = c_int
    G_bresenham_line.argtypes = [c_int, c_int, c_int, c_int, CFUNCTYPE(UNCHECKED(c_int), c_int, c_int)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 143
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_read_cats'):
    G_read_cats = _libs['grass_gis.6.4.2RC2'].G_read_cats
    G_read_cats.restype = c_int
    G_read_cats.argtypes = [String, String, POINTER(struct_Categories)]
